# ImageCompare

./: CMakeLists.txt  README.md  generate_proj.bat
src/: CmakeLists.txt  main.cpp
